--- a/CPlusPlus-Class/Exercice Enums/Exercice Enums.vcxproj
+++ b/CPlusPlus-Class/Exercice Enums/Exercice Enums.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{3137340f-c0f2-4013-a9e4-4ce6ec87b4fd}</ProjectGuid>
     <RootNamespace>ExerciceEnums</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>01.02. Ex. Enumeration</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
