--- a/CPlusPlus-Class/HelloWorld/HelloWorld.vcxproj
+++ b/CPlusPlus-Class/HelloWorld/HelloWorld.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{6a20880f-fc8d-465d-ad68-68b8e30bc70e}</ProjectGuid>
     <RootNamespace>HelloWorld</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>01.01. Ex. jeux de dés</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
